[gd_scene load_steps=6 format=3 uid="uid://h6cd18sk61m6"]

[ext_resource type="Script" uid="uid://ddx5gpjt1wi0v" path="res://front_desk.gd" id="1_il1gm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_il1gm"]
albedo_color = Color(0.5370987, 0.5370987, 0.5370987, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lqt5c"]
material = SubResource("StandardMaterial3D_il1gm")
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_il1gm"]
size = Vector3(1.9527588, 0.22753906, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_lqt5c"]
size = Vector3(2, 1, 1)

[node name="FrontDesk" type="Node3D"]
script = ExtResource("1_il1gm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_lqt5c")

[node name="PlayerServiceArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.24261498, -1.1267672)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerServiceArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05303955, -0.11749494, 0)
shape = SubResource("BoxShape3D_il1gm")

[node name="CustomerArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.24261498, 1.1027012)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CustomerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05303955, -0.11749494, 0)
shape = SubResource("BoxShape3D_il1gm")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_lqt5c")

[connection signal="body_entered" from="PlayerServiceArea" to="." method="_on_player_service_area_body_entered"]
[connection signal="body_exited" from="PlayerServiceArea" to="." method="_on_player_service_area_body_exited"]
[connection signal="body_entered" from="CustomerArea" to="." method="_on_player_service_area_body_entered"]
[connection signal="body_entered" from="CustomerArea" to="." method="_on_customer_area_body_entered"]
[connection signal="body_exited" from="CustomerArea" to="." method="_on_player_service_area_body_exited"]
[connection signal="body_exited" from="CustomerArea" to="." method="_on_customer_area_body_exited"]
